Actualizacion de archivo pom.xml y archivos de prueba

--- a/pom.xml
+++ b/pom.xml
@@ -41,7 +41,7 @@
                 <artifactId>exec-maven-plugin</artifactId>
                 <version>3.0.0</version>
                 <configuration>
-                    <mainClass>com.ejemplo.HolaMundo</mainClass>
+                    <mainClass>src.main.java.HolaMundo</mainClass>
                 </configuration>
             </plugin>
         </plugins>
